---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-06-30 Stephane Letz  <letz@grame.fr>

	* Tim Bechmann patch : hammerfall, only release monitor thread, if it has been created.

2009-06-19 Stephane Letz  <letz@grame.fr>

	* Correct JackTransportEngine::MakeAllLocating, sync callback has to be called in this case also.
	* NetJack2 code : better error checkout, method renaming.

2009-06-17 Stephane Letz  <letz@grame.fr>

	* Move DBus based audio device reservation code in ALSA backend compilation.

2009-06-16 Stephane Letz  <letz@grame.fr>

	* Correct JackFifo::TimedWait for EINTR handling.

2009-06-05 Stephane Letz  <letz@grame.fr>

	* Correct jack_set_error_function, jack_set_info_function and jack_set_thread_creator functions.

2009-05-18 Stephane Letz  <letz@grame.fr>

	* Correct wcsript files to create jackdbus only (and not create jackd anymore) when compiled in --dbus mode, add a --classic option. Both options are possible but issue a warning.

2009-05-15 Stephane Letz  <letz@grame.fr>

	* Move InitFrameTime in JackDriver::Start method.

2009-05-13 Stephane Letz  <letz@grame.fr>

	* Reworked Torben Hohn fix for server restart issue on Windows.

2009-05-11 Stephane Letz  <letz@grame.fr>

	* New jack_free function added in jack.h.
	* Torben Hohn fix for InitTime and GetMicroSeconds in JackWinTime.c.

2009-05-07 Stephane Letz  <letz@grame.fr>

	* Cleanup "loopback" stuff in server.

2009-05-06 Stephane Letz  <letz@grame.fr>

	* Fix transport callback (timebase master, sync) issue when used after jack_activate (RT thread was not running).
	* D-Bus access for jackctl_server_add_slave/jackctl_server_remove_slave API.
