@@ -25,6 +25,10 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
+2009-07-01 Stephane Letz  <letz@grame.fr>
+
+	* Tim Bechmann memops.c optimization patch.
+
 2009-06-30 Stephane Letz  <letz@grame.fr>
 
 	* Tim Bechmann patch : hammerfall, only release monitor thread, if it has been created.
